[package]
name = "winstacks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
windows = { version = "0.36.1", features = [
    "Win32_System_Diagnostics_Etw",
    "Win32_Foundation",
    "Win32_System_Time",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_System_SystemServices",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_LibraryLoader",
    "Win32_System_WindowsProgramming",
    "Win32_Storage_FileSystem"
] }
rustc-hash = "1.1.0"
# Only for the binary crate
inferno = { version = "0.11", optional = true }

[profile.release]
debug = true

[[bin]]
name = "winstacks"
path = "src/winstacks_bin.rs"

[[bin]]
name = "winferno"
path = "src/winferno.rs"
required-features = ["inferno"]

[[bin]]
name = "winstacks_dtrace"
path = "src/winstacks_dtrace.rs"
