[package]
name = "blondie"
description = "Collect CPU callstack samples from a windows process"
version = "0.3.1"
edition = "2021"
license = "MIT OR Apache-2.0 OR BSL-1.0 OR MPL-2.0 OR Zlib OR Unlicense"
homepage = "https://github.com/nico-abram/blondie/"
repository = "https://github.com/nico-abram/blondie/"
documentation = "https://docs.rs/blondie"
readme = "README.md"
keywords = ["windows", "profiling", "sampling", "callstack", "perf"]
categories = [
    "command-line-utilities",
    "development-tools::profiling",
    "development-tools"
]
include = ["/src", "LICENSE"]

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"

[dependencies]
windows = { version = "0.44.0", features = [
    "Win32_System_Diagnostics_Etw",
    "Win32_Foundation",
    "Win32_System_Time",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_System_SystemServices",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_LibraryLoader",
    "Win32_System_WindowsProgramming",
    "Win32_Storage_FileSystem",
    "Win32_System_SystemInformation"
] }
rustc-hash = "1.1.0"
# Only for the binary crate
inferno = { version = "0.11", optional = true }
clap = { version = "3.1", optional = true }

[profile.release]
debug = true

[[bin]]
name = "blondie"
path = "src/blondie_bin.rs"
required-features = ["inferno", "clap"]

[[bin]]
name = "blondie_dtrace"
path = "src/blondie_dtrace.rs"
